Fix iDevice Alignment

--- a/themes/queries.styl
+++ b/themes/queries.styl
@@ -3,6 +3,7 @@
 
     .title
         font-size 3rem
+        margin-bottom 0.5rem
     .subtitle
         font-size 1.5rem
     .contact
@@ -17,13 +18,15 @@
 
     .title
         font-size 11vw
+        margin 0.25rem auto
     .subtitle
         font-size 5vw
-        margin 0rem
+        margin 0rem auto
     .contact
-        margin 1rem
+        margin 2rem auto
     .muted
-        margin-bottom 4em
+        margin-top 1rem
+        margin-bottom 6rem
     .links
         font-size 0vw
     .content
